deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makeroom
  labels:
    app: makeroom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: makeroom
  template:
    metadata:
      labels:
        app: makeroom
    spec:
      containers:
      - name: mekeroom
        image: hook.com/makeroom:1
        ports:
        - containerPort: 443
        command: ["/makeroom"]

---
apiVersion: v1
kind: Service
metadata:
  name: makeroom
spec:
  selector:
    app: makeroom
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: admissionregistration.k8s.io/v1
#kind: ValidatingWebhookConfiguration
kind: MutatingWebhookConfiguration
metadata:
  name: "hook.test.com"
webhooks:
- name: "hook.test.com"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "makeroom"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM4VENDQWRtZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFRTVE0d0RBWURWUVFLRXdWdmQyNWwKY2pBZUZ3MHlNVEEyTURZeE5qVXlORFJhRncweU16QTFNRGN4TmpVeU5EUmFNQkF4RGpBTUJnTlZCQW9UQlc5MwpibVZ5TUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFyeXUyejJiLzVUUFpzaEduCkJVSHUxbVN1YUlRS1BjMDJHdTMyVWwzL3JoTWwzTDFIYk1DWlAxczJkMnhPZmNaejI1aHRqR1oxcjcya28xYUMKaVdDdFM1TlhlL0U4U2pTT1d5R3h6bDR3QTFnRW40dlFvOW9MOEo0by9UdldVcENHY0o3TURwNVNoRWVqMkdVbQpEQUEyTUtuSXcyMX [...]

  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
